commits wrap correctly

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -678,10 +678,6 @@ a.trpMiniLeftMenuItem {
       border: 1px solid fade(@trpGrey,50%);
       background-color: fade(@trpGrey,30%);
     }
-
-    .activity-time {
-      background-color: rgba(230,230,230,1);
-    }
   }
 
   .activity-detail {
@@ -690,8 +686,8 @@ a.trpMiniLeftMenuItem {
   }
 
   .activity-commit {
-    .activity-detail;
-    margin-left: 2px;
+    font-size: 12px;
+    line-height: 20px;
   }
 
   .activity-time {
@@ -700,12 +696,8 @@ a.trpMiniLeftMenuItem {
     position: absolute;
     right: 4px;
     top: 2px;
-    background-color: inherit;
     color: rgba(100,100,100,0.4);
-    padding-left: 5px;
-    background-color: @trpBgColor;
     z-index: 100;
-
   }
 
 }
@@ -727,7 +719,7 @@ a.trpMiniLeftMenuItem {
   vertical-align: middle;
   display: inline-block;
   opacity: 0.8;
-  width: 85%;
+  width: 205px;
 }
 
 
